--- a/src/styles/_sideMenu.scss
+++ b/src/styles/_sideMenu.scss
@@ -82,9 +82,8 @@ appears on the left side of the page.
     left: 0;
     bottom: 0;
     z-index: 1000; /* so the menu or its navicon stays above all content */
-    background: #191818;
+    background: #fff;
     overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
 }
     /*
     All anchors inside the menu should be styled like this.
@@ -124,7 +123,7 @@ appears on the left side of the page.
     */
     #menu .pure-menu-selected,
     #menu .pure-menu-heading {
-        background: #1f8dd6;
+        background: #607d8b;
     }
         /*
         This styles a link within a selected menu item `<li>`.
@@ -158,7 +157,7 @@ small screens.
     display: block; /* show this only on small screens */
     top: 0;
     left: 0; /* "#menu width" */
-    background: #000;
+    background: #111;
     background: rgba(0,0,0,0.7);
     font-size: 10px; /* change this value to increase/decrease button size */
     z-index: 10;
@@ -189,7 +188,7 @@ small screens.
         .menu-link span:after {
             position: absolute;
             margin-top: -0.6em;
-            content: " ";
+            content: "menu";
         }
 
         .menu-link span:after {
